Fix [fix maininfo gap] dashboard/mainInfo

--- a/src/components/Dashboard/dashboard.module.css
+++ b/src/components/Dashboard/dashboard.module.css
@@ -1,4 +1,5 @@
 .mainInfo {
   display: flex;
   flex-direction: row;
+  gap: var(--spacer-xs);
 }
